# prodigy-test

./: .gitignore  CLAUDE.md  README.md  convert_to_onnx.py  evaluate_model.py  goalkeeper_annotation.py  image_preprocessor.py  inference.py  main.py  pyproject.toml  quick_predict.py  run_prodigy.py  show_preprocessing.py  train_model.py
js/: README.md  gameplay-analyzer.js  index.html  inference-worker.js  serve.py  video-processor.js  worker-interface.js
